<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Kategorispillet</string>
    <string name="action_settings">Settings</string>
    <string name="loading">Vent venligst</string>
    <string name="cancel">Annuller</string>
    <string name="okay">Okay</string>
    <string name="yes">Ja</string>
    
    <!-- GAME ACTIVTY -->
    <string name="title_activity_game">Game</string>
    <string name="close_dialog">Er du sikker på at du vil afslutte?</string>

    <!-- PROFILE ACTIVITY -->
    <string name="profile_list_header">Profiler</string>
    <string name="game_list_header">Gemte Spil</string>
    <string name="customisation_header">Tilpas Stationer</string>
    <string name="profile_pic_description">Profil Billede</string>
    <string name="last_used">Sidst Brugt</string>
    <string name="predefined">Predefineret</string>
    <string name="category">Kategori</string>
    <string name="associated_pictograms">Pictogrammer</string>
    <string name="delete_row">Slet rækken</string>
    <string name="add_pictogram">Tilføj pictogram</string>
    <string name="add_station">Tilføj station</string>
    <string name="remove_pictogram">Fjern pictogram</string>
    <string name="save_game">Gem nyt spil</string>
    <string name="start_game">Start spil</string>
    <string name="picto_error">Fejl: PictoSearch eller CAT er ikke installeret på denne enhed.</string>
    <string name="station_error">Der skal være mindst en station.</string>
    <string name="category_error">Du mangler at vælge en kategori.</string>
    <string name="pictogram_error">Der skal være mindst et pictogram per station.</string>
    <string name="delete_dialog">Er du sikker på du vil slette dette spil?</string>
    <string name="InfoForDistanceForStations">Afstanden i sekunder </string>
    <string name="mainActivityInfo">Info</string>
    <string name="InfoText">Velkommen til Kategorispillet!\n
For at lave et nyt spil skal der først tilføjes en eller flere stationer hvilket gøres ved hjælp af knappen \"Tilføj station\".\n
Dette får en station til at vises under \"Tilpas stationer\". Denne station kan slettes ved at trykke på det røde kryds.\n
Ved at trykke på den hvide boks kan der vælges en kategori.\n
Bagefter trykkes der på det grønne plus og der kan nu vælges et eller flere piktogrammer til at tilhøre kategorien.\n
Vær opmærksom på der skal vælges mindst to piktogrammer hvis der kun laves én station.\n
Når det ønskede antal stationer er lavet, skal den hvide boks i bunden udfyldes med det antal sekunder toget skal køre mellem hver station. \n
Denne værdi skal være mellem 15 og 300 sekunder.\n
Herefter kan \"Start spil\" trykkes og spillet begynder.\n
Spillet kan også gemmes ved at trykke på \"Gem nyt spil\" og det gemmes så under den valgte profil, og gemte spil kan ses til venstre under "Gemte spil". \n
Det er desuden muligt at skifte profil ved at trykke på profilbilledet til venstre.</string>
    <!-- SAVE DIALOG ACTIVITY -->
    <string name="title_activity_save_dialog">SaveDialog</string>
    <string name="type_name">Indtast Navn</string>
    <string name="categories">Kategorier</string>
    <string name="textHint">Indtast navn her</string>
    <string name="invalid_symbols">De følgende symboler må ikke bruges:\n, ;</string>
    <string name="name_exists">Det indtastede navn findes allerede.</string>
    <string name="save_description">Spillet vil blive gemt under:</string>
    <string name="category_description">Vælg en kategori</string>
    
</resources>