<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:GComponent="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mainLayout"
    android:focusableInTouchMode="true"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:baselineAligned="false"
    android:orientation="horizontal" >

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight=".25"
        android:orientation="vertical" >

        <dk.aau.cs.giraf.gui.GTextView
            android:id="@+id/gameListHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/game_list_header"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="30sp"/>

        <dk.aau.cs.giraf.gui.GDividerHorizontal
            android:layout_width="match_parent"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_height="3dp" />

       <dk.aau.cs.giraf.gui.GList
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:id="@+id/savedConfig">
            </dk.aau.cs.giraf.gui.GList>
    </LinearLayout>

    <dk.aau.cs.giraf.gui.GDividerHorizontal
        android:layout_width="3dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_height="match_parent" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight=".5"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:orientation="horizontal"
            android:focusable="true">

            <dk.aau.cs.giraf.gui.GTextView
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:text= "@string/InfoForDistanceForStations"
                android:gravity="bottom" />

            <dk.aau.cs.giraf.gui.GEditText
                android:layout_width="150dp"
                android:layout_height="fill_parent"
                android:background="@color/white"
                android:inputType="numberSigned"
                android:id="@+id/distanceForStations"/>

            <dk.aau.cs.giraf.gui.GButton
                android:id="@+id/addStationButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/add_station"
                android:drawableRight="@android:drawable/ic_menu_add"
                android:onClick="onClickAddStation"
                android:text="@string/add_station"
                android:textColor="@color/black" />

            <dk.aau.cs.giraf.gui.GButton
                android:id="@+id/saveGameButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/save_game"
                android:onClick="onClickSaveGame"
                android:drawableRight="@android:drawable/ic_menu_save"
                android:text="@string/save_game"
                />

            <dk.aau.cs.giraf.gui.GButtonPlay
                android:id="@+id/startGameFromProfileButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/start_game"
                android:onClick="onClickStartGame"
                android:text="@string/start_game" />
        </LinearLayout>

        <dk.aau.cs.giraf.gui.GTextView
            android:id="@+id/customisationHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/customisation_header"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="30sp"
            />

        <dk.aau.cs.giraf.gui.GDividerHorizontal
            android:layout_width="match_parent"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_height="3dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <dk.aau.cs.giraf.gui.GTextView
                android:id="@+id/categoryHeader"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/category"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="15sp"
                />

            <dk.aau.cs.giraf.gui.GDividerVertical
                android:layout_width="3dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_height="match_parent"/>

            <dk.aau.cs.giraf.gui.GTextView
                android:id="@+id/associatedPictogramHeader"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".8"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/associated_pictograms"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="15sp"
                />
        </LinearLayout>

        <dk.aau.cs.giraf.gui.GList
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:id="@+id/stationList"
            android:layout_gravity="top">
        </dk.aau.cs.giraf.gui.GList>
    </LinearLayout>

</LinearLayout>